--- a/css/style.css
+++ b/css/style.css
@@ -1133,10 +1133,6 @@ color: var(--black);
   color: var(--text-gray);
 }
 
-.guests__accordion {
-  padding-top: 18px;
-}
-
 .guests__info {
   padding-left: 17px;
 }
@@ -1187,7 +1183,7 @@ color: var(--black);
 }
 
 .accordion-body {
-  padding: 30px 10px 30px 0;
+  padding: 27px 0 18px 0;
 }
 
 
@@ -1215,7 +1211,7 @@ color: var(--black);
 }
 
 .guests__accordion-button:not(.collapsed) {
-  padding: 17px 2px 33px 0;
+  padding: 34px 2px 33px 0;
   color: #ffffff;
   background-color: var(--black);
   box-shadow: none;
@@ -1259,11 +1255,13 @@ color: var(--black);
 }
 
 .guests__list {
+  gap: 30px;
   background-color: var(--black);
 }
 
 
 .guests__link-person {
+  margin-bottom: 12px;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -1416,7 +1414,7 @@ stroke: var(--btn-violet-color);
 }
 
 .playlists__text-original {
-  padding-top: 38px;
+  padding-top: 22px;
 }
 
 .playlists__text-line {
@@ -1576,6 +1574,10 @@ stroke: var(--btn-violet-color);
   font-size: 16px;
   line-height: 180%;
   color: #FFFFFF;
+}
+
+.product__br-text {
+  display: none;
 }
 
 .product__descr:last-child {
@@ -1745,6 +1747,7 @@ line-height: 20px;
   flex-direction: column;
   flex-wrap: wrap;
   position: relative;
+  padding-top: 32px;
   background: var(--black);
 }
 
@@ -1752,7 +1755,6 @@ line-height: 20px;
 .form-group {
   display: flex;
   position: relative;
-  padding-top: 32px;
 }
 
 textarea.form-control {
@@ -1794,6 +1796,7 @@ textarea.form-control {
   justify-content: space-between;
   gap: 30px;
   margin-bottom: 27px;
+  padding-top: 32px;
 }
 
 .about__input {
@@ -1842,8 +1845,8 @@ textarea.form-control {
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 400;
-  font-size: 16px;
-  line-height: 19px;
+  font-size: 20px;
+  line-height: 20px;
   color: #999999;
 }
 
