--- a/css/media.css
+++ b/css/media.css
@@ -1,3 +1,8 @@
+@media (min-width: 1285px) {
+    .container {
+        max-width: 1134px;
+    }
+}
 @media (max-width: 1285px) {
 
     .header__logo-img {
@@ -29,14 +34,7 @@
         display: none;
     }
 
-    /*.swiper-slide-active , .swiper-slide-next {
-        max-width: 397px;
-    }*/
-
-    .container {
-        max-width: 848px;
-    }
-
+    
     .hero {
         padding-bottom: 36px;
     }
@@ -90,10 +88,6 @@
 
     .broadcasts__row {
         justify-content: space-between;
-    }
-
-    .broadcasts__content {
-        width: 66.66666667%;
     }
 
     .broadcasts__item {
@@ -255,3 +249,145 @@
         column-gap: 109px;
     }
 }
+
+@media (max-width: 1285px) and (min-width: 992px) {
+    .container {
+        max-width: 848px;
+    }
+    .broadcasts__content {
+        width: 66.66666667%;
+    }
+}
+
+@media (max-width: 991.5px) and (min-width: 768px) {
+    .container {
+        max-width: 565px;
+    }
+
+}
+
+@media (max-width: 991.5px) {
+
+ /*burger*/
+
+
+ .menu-btn {
+    display: block;
+    width: 50px;
+    height: 50px;
+    position: relative;
+    left: 0;
+    margin-right: auto;
+    z-index: 200;
+    overflow: hidden;
+  }
+
+  .menu-btn span {
+    width: 30px;
+    height: 4px;
+    position: absolute;
+    top: 50%;
+    left: 35%;
+    transform: translate(-50%, -50%);
+    background-color: #333333;
+    transition: all 0.5s;
+  }
+
+  .menu-btn span:nth-of-type(2) {
+    top: calc(50% - 10px);
+  }
+
+  .menu-btn span:nth-of-type(3) {
+    top: calc(50% + 10px);
+  }
+
+  .menu {
+    display: block;
+    width: 100vw;
+    position: fixed;
+    height: 100vh;
+    top: 0;
+    left: -102%;
+    z-index: 100;
+    transition: all .3s;
+    background: #ffffff;
+  }
+
+
+  .menu__item {
+    padding-top: 40px;
+    margin-bottom: 20px;
+  }
+
+  .menu-active {
+    left: 0;
+    display: flex;
+    align-items: flex-start;
+    max-height: 100vh;
+  }
+
+  .menu__list-active {
+    display: inline-block;
+    columns: 2;
+    padding-top: 107px;
+    padding-left: 114px;
+  }
+
+  /* крестик на бургере*/
+
+  .menu-btn.active span:nth-of-type(1) {
+    display: none;
+  }
+
+  .menu-btn.active span:nth-of-type(2) {
+    top: 50%;
+    transform: translate(-50%, 0%) rotate(45deg);
+  }
+
+  .menu-btn.active span:nth-of-type(3) {
+    top: 50%;
+    transform: translate(-50%, 0%) rotate(-45deg);
+  }
+
+
+
+
+
+
+
+
+
+
+    .broadcasts__author {
+        min-height: 100px;
+        margin-bottom: 47px;
+    }
+
+    .broadcasts__list {
+        padding: 0;
+    }
+
+    .submenu {
+        gap: 15px;
+    }
+
+    .submenu__btns-container {
+        min-width: 5px;
+    }
+
+    .submenu__item {
+        border: none;
+    }
+
+    .submenu__item:nth-child(1) {
+        border-left: none;
+    }
+    .submenu__item:not(:first-child) {
+        display: none;
+    }
+
+    .submenu__text-container {
+        display: none;
+    }
+}
+
