--- a/css/style.css
+++ b/css/style.css
@@ -128,11 +128,9 @@ body {
   display: flex;
 }
 
-
-.container {
-  max-width: 1134px;
+.stop-scroll {
+  overflow: hidden;
 }
-
 
 .section-offset {
   padding-top: 94px;
