pixel-perfect 768px

--- a/css/media.css
+++ b/css/media.css
@@ -3,6 +3,7 @@
         max-width: 1134px;
     }
 }
+
 @media (max-width: 1285px) {
 
     .header__logo-img {
@@ -34,7 +35,7 @@
         display: none;
     }
 
-    
+
     .hero {
         padding-bottom: 36px;
     }
@@ -70,9 +71,7 @@
         background-position-y: center;
     }
 
-    .podcasts__item {
-        max-width: 48%;
-    }
+
 
     .podcasts__info-text {
         padding: 24px 30px 24px 32px;
@@ -120,6 +119,7 @@
     .guests__title {
         margin-bottom: 11px;
     }
+
     .guests__accordion {
         padding-top: 4px;
     }
@@ -170,8 +170,6 @@
         flex-direction: row;
         align-items: center;
         gap: 9px;
-        width: 33.33333333%;
-        max-width: 254px;
         padding: 0;
     }
 
@@ -206,21 +204,26 @@
 
     .product__new {
         max-width: 97px;
-    top: 19%;
-    left: 14px;
-    z-index: 2;
+        top: 19%;
+        left: 14px;
+        z-index: 2;
     }
 
     .about__img-line {
         display: none;
     }
-    
+
+    .about__img-star {
+        min-width: 255px;
+    }
+
     .about__row1 {
         gap: 16px;
     }
 
-    .button-prev, .button-next  {
-    top: 32%;
+    .button-prev,
+    .button-next {
+        top: 32%;
     }
 
     .about__name {
@@ -254,8 +257,18 @@
     .container {
         max-width: 848px;
     }
+
     .broadcasts__content {
         width: 66.66666667%;
+    }
+
+    .podcasts__item {
+        max-width: 48%;
+    }
+
+    .playlists__item {
+        width: 33.33333333%;
+        max-width: 254px;
     }
 }
 
@@ -264,98 +277,109 @@
         max-width: 565px;
     }
 
+
 }
 
 @media (max-width: 991.5px) {
 
- /*burger*/
+    .header__background-for-mobile {
+        position: absolute;
+        width: 100vw;
+        height: 60px;
+        background-color: var(--light-gray);
+        z-index: 0;
+    }
+
+    .header__part1 {
+        position: relative;
+        gap: 33px;
+        padding-bottom: 15px;
+    }
+
+    /*burger*/
 
 
- .menu-btn {
-    display: block;
-    width: 50px;
-    height: 50px;
-    position: relative;
-    left: 0;
-    margin-right: auto;
-    z-index: 200;
-    overflow: hidden;
-  }
+    .menu-btn {
+        display: block;
+        width: 22px;
+        height: 50px;
+        position: relative;
+        left: 0;
+        margin-right: auto;
+        z-index: 200;
+        overflow: hidden;
+    }
 
-  .menu-btn span {
-    width: 30px;
-    height: 4px;
-    position: absolute;
-    top: 50%;
-    left: 35%;
-    transform: translate(-50%, -50%);
-    background-color: #333333;
-    transition: all 0.5s;
-  }
+    .menu-btn span {
+        width: 30px;
+        height: 4px;
+        position: absolute;
+        top: 50%;
+        left: 35%;
+        transform: translate(-50%, -50%);
+        background-color: var(--btn-violet-color);
+        transition: all 0.5s;
+    }
 
-  .menu-btn span:nth-of-type(2) {
-    top: calc(50% - 10px);
-  }
+    .menu-btn span:nth-of-type(2) {
+        top: calc(50% - 10px);
+    }
 
-  .menu-btn span:nth-of-type(3) {
-    top: calc(50% + 10px);
-  }
+    .menu-btn span:nth-of-type(3) {
+        top: calc(50% + 10px);
+    }
 
-  .menu {
-    display: block;
-    width: 100vw;
-    position: fixed;
-    height: 100vh;
-    top: 0;
-    left: -102%;
-    z-index: 100;
-    transition: all .3s;
-    background: #ffffff;
-  }
-
-
-  .menu__item {
-    padding-top: 40px;
-    margin-bottom: 20px;
-  }
-
-  .menu-active {
-    left: 0;
-    display: flex;
-    align-items: flex-start;
-    max-height: 100vh;
-  }
-
-  .menu__list-active {
-    display: inline-block;
-    columns: 2;
-    padding-top: 107px;
-    padding-left: 114px;
-  }
-
-  /* крестик на бургере*/
-
-  .menu-btn.active span:nth-of-type(1) {
-    display: none;
-  }
-
-  .menu-btn.active span:nth-of-type(2) {
-    top: 50%;
-    transform: translate(-50%, 0%) rotate(45deg);
-  }
-
-  .menu-btn.active span:nth-of-type(3) {
-    top: 50%;
-    transform: translate(-50%, 0%) rotate(-45deg);
-  }
+    .menu {
+        display: block;
+        width: 100vw;
+        position: fixed;
+        height: 100vh;
+        top: 0;
+        left: -102%;
+        z-index: 100;
+        transition: all .3s;
+        background: #ffffff;
+    }
 
 
+    .menu__item {
+        padding-top: 40px;
+        margin-bottom: 20px;
+    }
 
+    .menu-active {
+        left: 0;
+        display: flex;
+        align-items: flex-start;
+        max-height: 100vh;
+    }
 
+    .menu__list-active {
+        display: inline-block;
+        columns: 2;
+        padding-top: 107px;
+        padding-left: 114px;
+    }
 
+    /* крестик на бургере*/
 
+    .menu-btn.active span:nth-of-type(1) {
+        display: none;
+    }
 
+    .menu-btn.active span:nth-of-type(2) {
+        top: 50%;
+        transform: translate(-50%, 0%) rotate(45deg);
+    }
 
+    .menu-btn.active span:nth-of-type(3) {
+        top: 50%;
+        transform: translate(-50%, 0%) rotate(-45deg);
+    }
+
+    .header__submenu-list {
+        gap: 29px;
+    }
 
 
     .broadcasts__author {
@@ -365,6 +389,30 @@
 
     .broadcasts__list {
         padding: 0;
+    }
+
+    .podcasts__info-text {
+        padding: 24px 2px 24px 29px;
+    }
+
+    .podcasts__btn-listen {
+        right: 5%;
+    }
+
+    .podcasts__social-activity {
+        padding: 8px 0 7px 19px;
+    }
+
+    .podcasts__btn-more {
+        padding: 27px 53px 22px 50px;
+    }
+
+    .choices__inner {
+        padding: 13px 2px 0px 11px;
+    }
+
+    .broadcasts__title {
+        margin-bottom: 10px;
     }
 
     .submenu {
@@ -382,6 +430,7 @@
     .submenu__item:nth-child(1) {
         border-left: none;
     }
+
     .submenu__item:not(:first-child) {
         display: none;
     }
@@ -389,5 +438,219 @@
     .submenu__text-container {
         display: none;
     }
-}
 
+    .podcasts__item {
+        max-width: none;
+    }
+
+    .broadcasts {
+        padding-bottom: 31px;
+        background-image: url("../img/Line-for-section-broadcasts.jpg");
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-position-y: 88.1%;
+    }
+
+    .broadcasts__archive {
+        position: static;
+        max-width: 345px;
+        margin: 0 auto;
+        padding: 0 0 0 90px;
+        background-position: left center;
+    }
+
+    .broadcasts__list {
+        margin-bottom: 92px;
+    }
+
+    .broadcasts__item {
+        padding: 167px 6px 16px 13px;
+    }
+
+    .broadcasts__item-title {
+        margin-bottom: 4px;
+    }
+
+    .broadcasts__schedule {
+        margin-bottom: 16px;
+    }
+
+    .broadcasts__link-archive {
+        margin-bottom: 9px;
+    }
+
+    .broadcasts__text-for-archive {
+        line-height: 23px;
+    }
+
+    .accordion-body {
+        padding: 27px 0 5px 0;
+    }
+
+    .guests__accordion {
+        margin-bottom: 50px;
+    }
+
+    .guests__list {
+        gap: 29px;
+    }
+
+    .guests__link-person {
+        margin-bottom: 26px;
+    }
+
+    .guests__descr {
+        max-width: 398px;
+    }
+
+    .guests__info {
+        padding-left: 12px;
+    }
+
+    .playlists__title {
+        margin-bottom: 9px;
+    }
+
+    .genre__list {
+        gap: 14px;
+        max-height: 235px;
+    }
+
+    .genre__item {
+        padding-bottom: 16px;
+    }
+
+    .playlists__genres {
+        margin-bottom: 19px;
+    }
+
+    .playlists__list {
+        gap: 29px;
+    }
+
+    .playlists__item {
+        width: 47%;
+    }
+
+    .products {
+        padding-top: 44px;
+    }
+
+    .product__photo {
+        position: static;
+    }
+
+    .products__img {
+        margin-bottom: 48px;
+    }
+
+    .product__new {
+        max-width: none;
+        top: 2%;
+        left: 2%;
+    }
+
+    .products__title {
+        padding-right: 75px;
+    }
+
+    .product__text {
+        padding: 2px 0 0 10px;
+    }
+
+    .product__br-text {
+        display: none;
+    }
+
+    .product__descr {
+        max-width: 535px;
+    }
+
+    .about__img-container {
+        justify-content: right;
+        position: relative;
+    }
+
+    .about__br-text {
+        display: inline;
+    }
+
+    .about__row1 {
+        gap: 32px;
+    }
+
+    .about__img-line {
+
+        display: inline-block;
+        position: absolute;
+        left: -26%;
+        height: 112px;
+        background-image: url("../img/Spiral_768.png");
+        background-repeat: repeat-x;
+        background-position: right;
+    }
+
+    .about__img-star {
+        display: inline-block;
+        height: 112px;
+        min-width: 112px;
+        background-position-x: right;
+    }
+
+    .button-prev,
+    .button-next {
+        top: 29.5%;
+    }
+
+    .button-prev {
+        left: -11.6%;
+    }
+
+    .button-next {
+        right: -7.4%;
+    }
+
+    .swiper__img {
+        margin-bottom: 30px;
+    }
+
+    .about__form {
+        padding-top: 31px;
+    }
+
+    .about__inputs {
+        flex-direction: column;
+    }
+
+    .about__input {
+        width: 100%;
+    }
+
+    .footer__social {
+        align-items: center;
+        margin-bottom: 77px;
+    }
+
+    .footer__social-img {
+        display: inline-block;
+        width: 36px;
+        height: 36px;
+    }
+
+    .footer__menu-list {
+        column-gap: 154px;
+    }
+
+    .footer__menu-list {
+        max-height: 150px;
+    }
+
+    .footer__menu-item {
+        margin-bottom: 22px;
+    }
+
+    .footer__part1 {
+        padding-bottom: 65px;
+    }
+
+}
